<?xml version="1.0" encoding="utf-8"?>

<!-- Pantalla -->
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPeriodoActivity"
    android:background="@color/ultragray">

    <!-- Titulo de la app -->
    <TextView
        android:id="@+id/lbl_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"/>

    <!-- Header / Añadir nuevo Periodo -->
    <TableLayout
        android:id="@+id/table_new_periodo"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16sp">
        <TextView
            android:id="@+id/lbl_periodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:layout_marginStart="44sp"
            android:text="@string/new_periodo"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:id="@+id/txt_periodo_hasta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="44sp"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="22sp"
            android:autofillHints="false"
            android:layout_marginTop="8sp"
            android:hint="@string/new_periodo_hasta"
            android:textColor="@color/softgray"
            android:textColorHint="@color/softgray"/>
        <EditText
            android:id="@+id/txt_periodo_balance_inicial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="44sp"
            android:digits="0123456789"
            android:inputType="phone"
            android:textAlignment="center"
            android:textSize="22sp"
            android:autofillHints="false"
            android:layout_marginTop="8sp"
            android:hint="@string/new_periodo_balance_inicial"
            android:textColor="@color/softgray"
            android:textColorHint="@color/softgray"/>
        <TextView
            android:id="@+id/lbl_exception"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"
            android:textColor="@color/colorRed"
            android:textAlignment="center"
            android:layout_marginTop="8sp"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/btn_new_periodo"
            android:layout_width="0dp"
            android:text="@string/new_periodo_aceptar"
            android:layout_marginHorizontal="44sp"
            android:textAlignment="center"
            android:layout_marginTop="16sp"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimaryDark"
            android:background="@color/black"/>
    </TableLayout>

</TableLayout>